--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ body, html {
               'title': 'The Metropolitan Museum of Art',
               'marker-color': '#E1C699',
               'marker-symbol': 'museum',
-              'marker-size': 'small',
+              'marker-size': 'medium',
               'images': [
                 ['https://mayralee.molloynewmedia.org/images/influencer.jpeg','The <a href="https://www.metmuseum.org/about-the-met">Metropolitan Museum of Art</a> is one of the most popular and most visited museums in the world. Home to a range of art displays dating back to 3700 B.C.'],
                 ['https://mayralee.molloynewmedia.org/images/torso.jpeg','Sculptures, paintings, and fashion are all forms of art that are put on display at The Met. The Met is also often known for a gala that they host every year where fashion is taken to the extreme and garments are then displayed in an exhibit for the upcoming year.'],
@@ -183,7 +183,7 @@ body, html {
               'title': 'The Brooklyn Botanic Garden',
               'marker-color': '#FFC0CB',
               'marker-symbol': 'garden',
-              'marker-size': 'large',
+              'marker-size': 'medium',
               'images': [
                 ['http://mayralee.molloynewmedia.org/images/bonsai.jpeg','The <a href="https://www.bbg.org/about/mission">Brooklyn Botanic Garden</a> is an urban botanic garden that connects people to the world of plants, fostering delight and curiosity while inspiring an appreciation and sense of stewarship of the environment.'],
                 ['http://mayralee.molloynewmedia.org/images/sky.jpeg','The ambience of the garden is extremely different to that of the Brooklyn Museum, despite the two locations being directly adjacent to one another. You\'ll find that the people walking the garden are typically more casually dressed. In addition, the garden is obviously seasonal seeing as the plants would not thrive well in harsh winter conditions.'],
