--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ body, html {
               'marker-symbol': 'museum',
               'marker-size': 'medium',
               'images': [
-                ['http://molloymediaarchaeology.org/images/dublintown.jpg','Students spent Sunday, May 29 in Dublin, Ireland.'],
+                ['http://molloymediaarchaeology.org/images/dublintown.jpg','<a href="https://www.elmuseo.org/about/">El Museo del Barrio</a> presents and preserves the art and culture of Puerto Ricans and all Latin Americans in the United States. El Museo educates its diverse public in the richness of Caribbean and Latin American arts and cultural history.'],
                 ['http://molloymediaarchaeology.org/images/jervis.jpg','<iframe width="280" height="195" src="https://www.youtube.com/embed/O31ciXE9tns" frameborder="0" allowfullscreen></iframe>','Students documented what they saw and experienced.']
               ]
           }
