--- a/minimap.html
+++ b/minimap.html
@@ -122,8 +122,8 @@ html {
               // Store the image url and caption in an array.
               'images': [
                 ['http://mayralee.molloynewmedia.org/images/campbellsoup.jpeg','The <a href="https://www.moma.org/about/">Museum of Modern Art</a>, MoMA, shares the most thought-provoking modern and contemporary art to foster conversation regarding diverse cultural, artistic, social and political positions.'],
-                ['http://mayralee.molloynewmedia.org/images/starrynight.jpeg','Students completed this map and archive along with a certificate in <a href="https://www.dkit.ie/news/dkit-unveils-new-programme-certificate-cultural-landscapes-newgrange-boyne-valley">Cultural Landscapes</a> at <a href="https://www.dkit.ie/">DkIT</a>, Dundalk Institute of Technology, led by professor <a href="https://www.dkit.ie/users/dr-conor-brady">Conor Brady</a>.'],
-                ['http://mayralee.molloynewmedia.org/images/thereality.jpeg','<span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Molloy Media Archaeology Map & Archive</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://molloymediaarchaeology.org/archive" property="cc:attributionName" rel="cc:attributionURL">SAP 261</a>, led by <a href="http://mapplega.com">Matt Applegate</a>, <a href="http://www.jamesncohen.com/">Jamie Cohen</a>, & <a href="http://margaretdelima.com/home.html">Margaret DeLima</a>, is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>. <br><br>Our map is powered by <a href="http://mapbox.com">Mapbox</a> and our archive is powered by <a href="http://omeka.org">Omeka!</a>']
+                ['http://mayralee.molloynewmedia.org/images/starrynight.jpeg','Some of the most famous and most revered paintings and works of art in the world are displayed both contemporary and historic.'],
+                ['http://mayralee.molloynewmedia.org/images/thereality.jpeg','Being able to discover newer artists and seeing artwork that reflects the mood of the world we are currently living in is a very refreshing experience which is exclusive to MoMA.']
               ]
           }
       }, {
@@ -163,7 +163,7 @@ html {
               'marker-symbol': 'museum',
               'marker-size': 'medium',
               'images': [
-                ['http://molloymediaarchaeology.org/images/dublintown.jpg','Students spent Sunday, May 29 in Dublin, Ireland.'],
+                ['http://molloymediaarchaeology.org/images/dublintown.jpg','<a href="https://www.elmuseo.org/about/">El Museo del Barrio</a> presents and preserves the art and culture of Puerto Ricans and all Latin Americans in the United States. El Museo educates its diverse public in the richness of Caribbean and Latin American arts and cultural history.'],
                 ['http://molloymediaarchaeology.org/images/jervis.jpg','<iframe width="280" height="195" src="https://www.youtube.com/embed/O31ciXE9tns" frameborder="0" allowfullscreen></iframe>','Students documented what they saw and experienced.']
               ]
           }
