--- a/minimap.html
+++ b/minimap.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb18030">
 <title>NYC Museums</title>
-<meta name="description" content="A student-led project by Molloy College. Media Archaeology in the Boyne Valley.">
+<meta name="description" content="Mayralee's exploration of NYC Museums and their patrons">
 <meta name='viewport' content='initial-scale=1,maximum-scale=1' />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -214,7 +214,7 @@ html {
           // http://leafletjs.com/reference.html#popup
           marker.bindPopup(popupContent,{
               closeButton: false,
-              minWidth: 320
+              minWidth: 500
           });
       });
 
