--- a/minimap.html
+++ b/minimap.html
@@ -151,7 +151,7 @@ html {
               'images': [
                 ['https://mayralee.molloynewmedia.org/images/influencer.jpeg','The <a href="https://www.metmuseum.org/about-the-met">Metropolitan Museum of Art</a> is one of the most popular and most visited museums in the world. Home to a range of art displays dating back to 3700 B.C.'],
                 ['https://mayralee.molloynewmedia.org/images/torso.jpeg','Sculptures, paintings, and fashion are all forms of art that are put on display at The Met. The Met is also often known for a gala that they host every year where fashion is taken to the extreme and garments are then displayed in an exhibit for the upcoming year.'],
-                ['https://mayralee.molloynewmedia.org/images/degas.jpeg','Many world-renowned artist host their art at this museum. Above you\'ll see art by Edgar Degas, who rose to fame with his bronze sculptures. Due to such fame, patrons are often more dressed up when arriving at the Met. The museum also tends to have a posh air about it that is reinforced by the amount of obvious security around every corner.']
+                ['https://mayralee.molloynewmedia.org/images/degas.jpeg','Many world-renowned artists host their art at this museum. Above you\'ll see art by Edgar Degas, who rose to fame with his bronze sculptures. Due to such fame, patrons are often more dressed up when arriving at the Met. The museum also tends to have a posh air about it that is reinforced by the amount of obvious security in suits around every corner.']
               ]
           }
       }, {
