--- a/index.html
+++ b/index.html
@@ -254,8 +254,9 @@ body, html {
       <!-- SET THE MAP VIEW HERE -->
       map.setView([40.73, -73.96], 12);
       </script>
-      <br><p>This is the first paragraph of my webpage, despite the div above.
-      Keep writing in this section. This is the first paragraph of my webpage, despite the div above. Keep writing in this section.</p></br>
+      <br><p>New York is one of the greatest and most populous cities in the world. With that honor comes lots of historic and wonderful locations to appreciate so many parts of our wonderful city. In this project, I chose to focuse on my favorite part of visiting New York City, the museums. 
+New York City Museums are filled with world-renowned art and patrons from all over the world stop to visit the eighty-three museums we have spread across our five boroughs. 
+</p></br>
     </div>
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
